--- a/config/sway/config.d/60-windows-pavucontrol.conf
+++ b/config/sway/config.d/60-windows-pavucontrol.conf
@@ -1,3 +1,7 @@
+for_window [app_id="pavucontrol"] {
+    floating enable
+    move position center
+}
 for_window [app_id="pavucontrol-qt"] {
     floating enable
     move position center 
