fix(firefox): disable speech-dispatcher and picture-in-pucture button
Update sharing indicator title for sway window rules.

--- a/config/sway/config.d/60-windows-browser.conf
+++ b/config/sway/config.d/60-windows-browser.conf
@@ -10,7 +10,7 @@ for_window [con_mark="Browser"] {
 }
 
 # firefox wayland screensharing indicator
-for_window [app_id="firefox" title="Firefox - Sharing Indicator"] {
+for_window [app_id="firefox" title="Firefox — Sharing Indicator"] {
     floating enable
     move position 200 0
 }
