feat(sway): update startup configs

--- a/config/sway/config.d/90-systemd.conf
+++ b/config/sway/config.d/90-systemd.conf
@@ -1,5 +1,7 @@
-# Systemd autostart target (https://github.com/swaywm/sway/wiki/Systemd-integration)
-exec command -v dbus-update-activation-environment 2>/dev/null && \
-     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
-exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP && \
+# Import minimal required environment for dbus and systemd user services
+# Set XDG_CURRENT_DESKTOP to "sway" for xdg-desktop-portal service
+exec hash dbus-update-activation-environment 2>/dev/null && \
+     dbus-update-activation-environment --systemd DISPLAY SWAYSOCK WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+exec export XDG_CURRENT_DESKTOP=sway && \
+     systemctl --user import-environment DISPLAY SWAYSOCK WAYLAND_DISPLAY XDG_CURRENT_DESKTOP && \
      systemctl --user start sway-session.target
