feat(tmux): track SWAYSOCK and WAYLAND_DISPLAY env variables

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,4 +8,4 @@ set -g bell-action any
 set -g visual-bell off
 set -g message-style bg=default,fg=default
 set -g status-style bg=default,fg=default
-#set -g status-utf8
+set -ga update-environment ",SWAYSOCK,WAYLAND_DISPLAY"
