feat(tmux): focus-events -> on

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@ unbind C-b
 set -g prefix ^A
 bind a send-prefix
 set -g escape-time 10
+set -g focus-events on
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",alacritty:Tc,foot:Tc"
 set -g bell-action any
