feat(sway): move GTK3 theme into gtk config file

--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -2,3 +2,5 @@
 gtk-application-prefer-dark-theme=true
 gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Papirus-Dark
+gtk-font-name=Roboto 12
+monospace-font-name=Roboto Mono 11
