--- a/config/sway/config.d/80-gtk-settings.conf
+++ b/config/sway/config.d/80-gtk-settings.conf
@@ -1,5 +1,2 @@
 # configure theme and fonts for GTK3 applications
-exec gsettings set org.gnome.desktop.interface gtk-theme Arc
-exec gsettings set org.gnome.desktop.interface icon-theme Papirus-Dark
-exec gsettings set org.gnome.desktop.interface font-name 'Roboto 12'
-exec gsettings set org.gnome.desktop.interface monospace-font-name 'Roboto Mono 12'
+exec $HOME/dotfiles/scripts/import-gsettings.py
