feat(sway): add sync notification hints to brightness bindings

--- a/config/sway/config
+++ b/config/sway/config
@@ -87,8 +87,12 @@ bindsym --locked {
     XF86AudioNext         exec playerctl next
     XF86AudioPlay         exec playerctl play-pause
     XF86AudioPrev         exec playerctl previous
-    XF86MonBrightnessDown exec light -U 5 && notify-send -h int:value:$(light) -t 800 light
-    XF86MonBrightnessUp   exec light -A 5 && notify-send -h int:value:$(light) -t 800 light
+    XF86MonBrightnessDown exec light -U 5 && \
+        notify-send -h string:x-canonical-private-synchronous:backlight \
+            -h int:value:$(light) -t 800 backlight
+    XF86MonBrightnessUp   exec light -A 5 && \
+        notify-send -h string:x-canonical-private-synchronous:backlight \
+            -h int:value:$(light) -t 800 backlight
 }
 #
 # Basics:
