feat(sway): enable adaptive_sync on S2721DGF

--- a/config/sway/local-hitagi.home.alebastr.su.conf
+++ b/config/sway/local-hitagi.home.alebastr.su.conf
@@ -14,7 +14,7 @@ input "1386:21110:Wacom_HID_5276_Pen" {
 }
 
 output eDP-1 adaptive_sync on
-# output "Dell Inc. DELL S2721DGF 2JHW523" {
-#     mode "2560x1440@165Hz"
-#     adaptive_sync on
-# }
+output "Dell Inc. DELL S2721DGF 2JHW523" {
+    mode "2560x1440@165Hz"
+    adaptive_sync on
+}
