feat: fix terminal fonts
Enable xdg-activation for foot

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -104,8 +104,8 @@
 # Font configuration
 font:
   normal:
-  #  family: Liberation Mono
-    family: LiterationMono Nerd Font
+    family: Liberation Mono
+  #  family: LiterationMono Nerd Font
   #  family: Cascadia Code
   #  family: Cousine
   #  family: Fira Code
