--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=Liberation Mono:size=12
+font=LiberationMono:size=13
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -35,7 +35,7 @@ notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 # workers=<number of logical CPUs>
 
 [bell]
-# urgent=no
+urgent=yes
 notify=yes
 # command=
 # command-focused=no
