--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -34,6 +34,8 @@ notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 # selection-target=primary
 # workers=<number of logical CPUs>
 
+include=~/.config/foot/xterm-mod.ini
+
 [bell]
 urgent=yes
 notify=yes
@@ -70,24 +72,24 @@ background=000000
 foreground=ffffff
 
 ## Normal/regular colors (color palette 0-7)
-regular0=000000  # black
-regular1=cd0000  # red
-regular2=00cd00  # green
-regular3=cdcd00  # yellow
-regular4=0000ee  # blue
-regular5=cd00cd  # magenta
-regular6=00cdcd  # cyan
-regular7=e5e5e5  # white
+# regular0=222222  # black
+# regular1=cc9393  # red
+# regular2=7f9f7f  # green
+# regular3=d0bf8f  # yellow
+# regular4=6ca0a3  # blue
+# regular5=dc8cc3  # magenta
+# regular6=93e0e3  # cyan
+# regular7=dcdccc  # white
 
 ## Bright colors (color palette 8-15)
-bright0=7f7f7f   # bright black
-bright1=ff0000   # bright red
-bright2=00ff00   # bright green
-bright3=ffff00   # bright yellow
-bright4=5c5cff   # bright blue
-bright5=ff00ff   # bright magenta
-bright6=00ffff   # bright cyan
-bright7=ffffff   # bright white
+# bright0=666666   # bright black
+# bright1=dca3a3   # bright red
+# bright2=bfebbf   # bright green
+# bright3=f0dfaf   # bright yellow
+# bright4=8cd0d3   # bright blue
+# bright5=fcace3   # bright magenta
+# bright6=b3ffff   # bright cyan
+# bright7=ffffff   # bright white
 
 ## dimmed colors (see foot.ini(5) man page)
 # dim0=<not set>
