feat(sway): adapt to fedora-sway-configs

--- a/config/sway/local-hitagi.home.alebastr.su.conf
+++ b/config/sway/local-hitagi.home.alebastr.su.conf
@@ -1,5 +1,10 @@
 # vim: ft=conf
 
+input type:keyboard {
+    xkb_layout us,ru
+    xkb_options grp:shifts_toggle
+}
+
 input "1739:52824:SYNA8008:00_06CB:CE58_Touchpad" {
     natural_scroll enabled
     tap enabled
@@ -13,7 +18,11 @@ input "1386:21110:Wacom_HID_5276_Pen" {
     map_to_output eDP-1
 }
 
-output eDP-1 adaptive_sync on
+output eDP-1 {
+    adaptive_sync on
+    position 0 0
+}
+
 output "Dell Inc. DELL S2721DGF 2JHW523" {
     mode "2560x1440@165Hz"
     adaptive_sync on
