--- a/config/sway/config
+++ b/config/sway/config
@@ -10,23 +10,31 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
+# Recommends: foot
 set $term foot
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu     'rofi -show run'
-set $alt_menu 'rofi -show drun'
+# Recommends: rofi-wayland
+set $rofi_cmd rofi \
+        -run-command 'swaymsg exec -- {cmd}' \
+        -run-shell-command 'swaymsg exec -- {terminal} -e {cmd}' \
+        -terminal '$term'
+# Shows a list of the executables from PATH
+set $menu     $rofi_cmd -show  run
+# Shows a list of the applications with desktop files installed
+set $app_menu $rofi_cmd -show drun
+# Both of the above in a single list
+# set $menu $rofi_cmd -show combi -combi-modes run#drun
+
+# Configure 30-bindings-volume.conf
+set $volume_step  3
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-set $wallpaper ~/Pictures/current-wallpaper.jpg
-set $primary_output "eDP-1"
-output * bg $wallpaper fill
-
-output $primary_output {
-    position 0 0
-}
+# Requires: desktop-backgrounds-compat, swaybg
+output * bg ~/Pictures/current-wallpaper.jpg fill
 #
 # Example configuration:
 #
@@ -40,19 +48,12 @@ output $primary_output {
 #
 # exec swayidle -w \
 #          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' \
-#               resume 'swaymsg "output * dpms on"' \
+#          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
 #          before-sleep 'swaylock -f -c 000000'
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
-set $lock "swaylock -f -s fill -i $wallpaper"
-exec swayidle -w \
-         timeout 300  $lock \
-         timeout 600  'swaymsg "output * dpms off"' \
-              resume  'swaymsg "output * dpms on"' \
-         before-sleep $lock
 
 ### Input configuration
 #
@@ -68,44 +69,32 @@ exec swayidle -w \
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
-input type:keyboard {
-    xkb_layout us,ru
-    xkb_options grp:shifts_toggle
-}
-
 ### Key bindings
-# Horrible mix of awesome, xmonad and i3 bindings
 #
 # Basics:
 #
-# Drag floating windows by holding down $mod and left mouse button.
-# Resize them with right mouse button + $mod.
-# Despite the name, also works for non-floating windows.
-# Change normal to inverse to use left mouse button for resizing and right
-# mouse button for dragging.
-floating_modifier $mod normal
-
-bindsym --to-code {
     # Start a terminal
-    $mod+Return exec $term
+    bindsym $mod+Return exec $term
 
     # Kill focused window
-    $mod+Shift+c kill
+    bindsym --to-code $mod+Shift+c kill
 
     # Start your launcher
-    $mod+p       exec $menu
-    $mod+Shift+p exec $alt_menu
+    bindsym --to-code $mod+d exec $menu
+    bindsym --to-code $mod+Shift+d exec $app_menu
 
-    # Lock screen
-    $mod+l exec $lock
+    # Drag floating windows by holding down $mod and left mouse button.
+    # Resize them with right mouse button + $mod.
+    # Despite the name, also works for non-floating windows.
+    # Change normal to inverse to use left mouse button for resizing and right
+    # mouse button for dragging.
+    floating_modifier $mod normal
 
     # Reload the configuration file
-    $mod+q reload
-    $mod+Control+r reload
+    bindsym --to-code $mod+q reload
 
     # Exit sway (logs you out of your Wayland session)
-    $mod+Shift+q exec nwgbar
-}
+    bindsym --to-code $mod+Shift+q exec nwgbar
 #
 # Moving around:
 #
@@ -113,23 +102,12 @@ bindsym --to-code {
     bindsym $mod+Tab focus next
     bindsym $mod+Shift+Tab focus prev
     bindsym $mod+Ctrl+Tab exec ~/dotfiles/scripts/window-switcher.sh
-
-    # bindsym $mod+$left focus left
-    # bindsym $mod+$down focus down
-    # bindsym $mod+$up focus up
-    # bindsym $mod+$right focus right
-    # Or use $mod+[up|down|left|right]
     bindsym $mod+Left focus left
     bindsym $mod+Down focus down
     bindsym $mod+Up focus up
     bindsym $mod+Right focus right
 
     # Move the focused window with the same, but add Shift
-    # bindsym $mod+Shift+$left move left
-    # bindsym $mod+Shift+$down move down
-    # bindsym $mod+Shift+$up move up
-    # bindsym $mod+Shift+$right move right
-    # Ditto, with arrow keys
     bindsym $mod+Shift+Left move left
     bindsym $mod+Shift+Down move down
     bindsym $mod+Shift+Up move up
@@ -137,32 +115,30 @@ bindsym --to-code {
 #
 # Workspaces:
 #
-bindsym {
     # Switch to workspace
-    $mod+1 workspace 1
-    $mod+2 workspace 2
-    $mod+3 workspace 3
-    $mod+4 workspace 4
-    $mod+5 workspace 5
-    $mod+6 workspace 6
-    $mod+7 workspace 7
-    $mod+8 workspace 8
-    $mod+9 workspace 9
-    $mod+0 workspace 10
+    bindsym $mod+1 workspace number 1
+    bindsym $mod+2 workspace number 2
+    bindsym $mod+3 workspace number 3
+    bindsym $mod+4 workspace number 4
+    bindsym $mod+5 workspace number 5
+    bindsym $mod+6 workspace number 6
+    bindsym $mod+7 workspace number 7
+    bindsym $mod+8 workspace number 8
+    bindsym $mod+9 workspace number 9
+    bindsym $mod+0 workspace number 10
     # Move focused container to workspace
-    $mod+Shift+1 move container to workspace 1
-    $mod+Shift+2 move container to workspace 2
-    $mod+Shift+3 move container to workspace 3
-    $mod+Shift+4 move container to workspace 4
-    $mod+Shift+5 move container to workspace 5
-    $mod+Shift+6 move container to workspace 6
-    $mod+Shift+7 move container to workspace 7
-    $mod+Shift+8 move container to workspace 8
-    $mod+Shift+9 move container to workspace 9
-    $mod+Shift+0 move container to workspace 10
+    bindsym $mod+Shift+1 move container to workspace number 1
+    bindsym $mod+Shift+2 move container to workspace number 2
+    bindsym $mod+Shift+3 move container to workspace number 3
+    bindsym $mod+Shift+4 move container to workspace number 4
+    bindsym $mod+Shift+5 move container to workspace number 5
+    bindsym $mod+Shift+6 move container to workspace number 6
+    bindsym $mod+Shift+7 move container to workspace number 7
+    bindsym $mod+Shift+8 move container to workspace number 8
+    bindsym $mod+Shift+9 move container to workspace number 9
+    bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
-}
 #
 # Layout stuff:
 #
@@ -236,34 +212,30 @@ mode "resize" {
 }
 bindsym --to-code $mod+r mode "resize"
 
-### Window configs and defaults
-for_window [class="pavucontrol-qt"] floating enable
-for_window [app_id="pinentry-qt"] floating enable
-for_window [app_id="zenity"] floating enable
-assign [con_mark="Browser"] 2
-assign [con_mark="MailClient"] 3
-assign [app_id="calibre"] 4
-assign [class="calibre"] 4
-assign [class="Spotify"] 7
-assign [class="Steam"] 6
-# nested wlroots compositors
-assign [app_id="wlroots"] 9
-
 default_border none
 hide_edge_borders --i3 both
-#
-# Status Bar:
-#
-# Read `man 5 sway-bar` for more information about this section.
-bar {
-    swaybar_command waybar
-    position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-#   status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
-}
 
 include local-$HOSTNAME.conf
-include /etc/sway/config.d/*
-include config.d/*.conf
+
+# Include configs from 3 locations:
+#  - /usr/share/sway/config.d
+#  - /etc/sway/config.d
+#  - $XDG_CONFIG_HOME/sway/config.d ($HOME/.config/sway/config.d)
+#
+# If multiple directories contain the files with the same name, the later
+# directory takes precedence; `$XDG_CONFIG_HOME/sway/config.d/20-swayidle.conf`
+# will always be loaded instead of `/usr/share/sway/config.d/20-swayidle.conf`
+# or `/etc/sway/config.d/20-swayidle.conf`
+#
+# This mechanism permits overriding our default configuration per-system
+# (/etc) or per-user ($XDG_CONFIG_HOME) basis. Just create the file you
+# want to modify/override in the higher-level directory.
+#
+# For example, to disable the default bar from Fedora configs, you'll need to
+#     $ echo -n > "$HOME/.config/sway/config.d/90-bar.conf"
+#
+# Note the quoting, the $() and the arguments quoting. All the parts are equally
+# important to make the magic work. And if you want to learn the secret behind
+# the trick, it's all in the `wordexp(3)`.
+#
+include '$(/usr/libexec/sway/layered-include "/usr/share/sway/config.d/*.conf" "/etc/sway/config.d/*.conf" "${XDG_CONFIG_HOME:-$HOME/.config}/sway/config.d/*.conf")'
