--- a/config/sway/config.d/50-rules-browser.conf
+++ b/config/sway/config.d/50-rules-browser.conf
@@ -1,7 +1,9 @@
 # apply mark for Xwayland and wayland native browser windows
 for_window [class="Chromium-browser"] mark Browser
+for_window [class="Brave-browser"] mark Browser
 for_window [class="firefox"]  mark Browser
 for_window [app_id="Chromium-browser"] mark Browser
+for_window [app_id="brave-browser"] mark Browser
 for_window [app_id="firefox"] mark Browser
 
 # inhibit scrensaver for fullscreen browser windows
