sway: sync with fedora defaults.
Apply system-wide keyboard layout.

--- a/config/sway/config.d/00-variables.conf
+++ b/config/sway/config.d/00-variables.conf
@@ -1,2 +1,3 @@
-# Configure 30-bindings-volume.conf
-set $volume_step  3
+# Configure 60-bindings-volume.conf
+set $volume_step     3
+set $volume_limit  100
