--- a/config/sway/config
+++ b/config/sway/config
@@ -17,11 +17,13 @@ set $term foot
 # on the original workspace that the command was run on.
 # Recommends: rofi-wayland
 set $rofi_cmd rofi \
-        -run-command 'swaymsg exec -- {cmd}' \
-        -run-shell-command 'swaymsg exec -- {terminal} -e {cmd}' \
+        -run-command 'swaymsg -q exec -- {cmd}' \
+        -run-shell-command 'swaymsg -q exec -- {terminal} -e {cmd}' \
         -terminal '$term'
-# Shows a list of the apps with desktop files and executables from PATH
-set $menu $rofi_cmd -show combi -modes combi -combi-modes drun#run
+# Shows a combined list of the applications with desktop files and
+# executables from PATH.
+# TODO: add window with the next release of rofi-wayland
+set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
 
 ### Output configuration
 #
