dunst: use rofi as dmenu command

--- a/config/dunst/dunstrc.d/50-user.conf
+++ b/config/dunst/dunstrc.d/50-user.conf
@@ -11,4 +11,5 @@
     font = Liberation Mono 11
     max_icon_size = 64
     layer = top
+    dmenu = /usr/bin/rofi -dmenu -i -p dunst
 # vim: ft=cfg
