dunst: force notification timeout for Telegram

--- a/config/dunst/dunstrc.d/50-user.conf
+++ b/config/dunst/dunstrc.d/50-user.conf
@@ -12,4 +12,10 @@
     max_icon_size = 64
     layer = top
     dmenu = /usr/bin/rofi -dmenu -i -p dunst
+    enable_recursive_icon_lookup = true
+
+# Rules
+[tdesktop]
+appname =
+timeout = 10s
 # vim: ft=cfg
